# DSA

./: CMakeLists.txt  README.md  main.c
3.array/: CMakeLists.txt  array.c  ch3_e1.h  ch3_e10.h  ch3_e12.h  ch3_e14.h  ch3_e19.h  ch3_e2.h  ch3_e20.h  ch3_e25.h  ch3_e26.h  ch3_e3.h  ch3_e4.h  ch3_e6.h  ch3_e7.h  ch3_e8.h  ch3_e9.h
ch01.c_intro/: introduction_to_c.c
ch03.array/: ch3_e13.h  ch3_e21.h  ch3_e27.h  ch3_e5.h
ch04.string/: string.c
ch05.structures_and_unions/: structures_and_unions.c
ch06.linked_lists/: linked_lists.c
ch07.stacks/: stacks.c
ch08.Queues/: queues.c
ch09.Trees/: readme.md
ch10.efficient_binary_tree/: efficient_binary_tree.c
ch3.array/: ch3_e11.h  ch3_e15.h  ch3_e16.h  ch3_e17.h  ch3_e18.h  ch3_e22.h  ch3_e23.h  ch3_e24.h
